[package]
name = "sync_select"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "A short-circuiting (verbose) `std::thread::scope`."
exclude = [".github/", ".gitignore", "LICENSE", "README.md"]

[profile.release]
lto = true
codegen-units = 1
